fix menu dish-label z-index
ajout d'un z-index sur le label des plat qui permet de cliquer partout sur la carte, car on ne pouvait pas désélectionner en cliquant sur la coche

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2388,6 +2388,7 @@ button {
   position: absolute;
   width: 100%;
   height: 100%;
+  z-index: 3;
   cursor: pointer;
   border-radius: 0.66rem;
 }
@@ -2617,6 +2618,7 @@ button {
     position: absolute;
     width: 100%;
     height: 100%;
+    z-index: 3;
     cursor: pointer;
     border-radius: 0.78rem;
   }
@@ -2846,6 +2848,7 @@ button {
     position: absolute;
     width: 100%;
     height: 100%;
+    z-index: 3;
     cursor: pointer;
     border-radius: 1.05rem;
   }
@@ -3075,6 +3078,7 @@ button {
     position: absolute;
     width: 100%;
     height: 100%;
+    z-index: 3;
     cursor: pointer;
     border-radius: 0.78rem;
   }
