--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -132,7 +132,7 @@
       position: absolute;
       width: 100%;
       height: 100%;
-
+      z-index:3;
       cursor: pointer;
       border-radius: 0.6 * map-get($size, dish__title);
     }
